# SetsPrac

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  out.html  sets.cpp
locall/: CMakeLists.txt  grouper.cpp  grouper.hpp
test/: CMakeLists.txt  test.cpp
